pxc/tests/test_025_slice/const4.px

namespace const4;
import common -;

function void test1()
{
  vector{int} a;
  a.resize(100, int());
  size_t i;
  for (i = 0; i < 100; ++i) { a[i] = static_cast{int}(i * 2); }
  cslice{int} asli = a[30..100]; // ok
  println(asli[0]);
  vector{int} const b = a;
  slice{int} bsli = b[50..100]; // error
}

test1();
